[package]
name = "objcache"
version = "0.1.0"
edition = "2021"
authors = ["Hannes Körber <hannes@hkoerber.de>"]
rust-version = "1.70"
description = "Cache objects using redis"
license = "GPL-3.0-only"

[workspace]
members = ["examples"]

[dependencies]
tokio = { version = "1.*", default-features = false, features = [] }
serde = { version = "1.0.*", default-features = false, features = ["std", "derive"] }
chrono = { version = "0.4.*", default-features = false, features = ["std", "now", "serde"] }
serde_json = { version = "1.0.*", default-features = false, features = ["std"] }
redis = { version = "0.23.*", default-features = false, features = ["serde", "aio", "tokio-comp"] }
redlock = { version = "2.0.*", default-features = false }
tracing = { version = "0.1.*", default-features = false, features = ["attributes"] }

[lints.rust]
absolute_paths_not_starting_with_crate = "deny"
elided_lifetimes_in_paths = "deny"
explicit_outlives_requirements = "deny"
keyword_idents = "deny"
let_underscore_drop = "deny"
non_ascii_idents = "deny"
non_local_definitions = "deny"
single_use_lifetimes = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unsafe_code = { level = "forbid", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"
unstable_features = { level = "forbid", priority = -1 }
unused_crate_dependencies = "allow"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
unused_results = "deny"
variant_size_differences = "deny"

[lints.clippy]
missing_errors_doc = "allow"
redundant_pub_crate = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
too_many_lines = "allow"
type_complexity = "allow"

pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# restrictions
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"
arithmetic_side_effects = "deny"
as_conversions = "deny"
assertions_on_result_states = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
decimal_literal_representation = "deny"
default_numeric_fallback = "deny"
deref_by_slicing = "deny"
disallowed_script_idents = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
exit = "deny"
expect_used = "deny"
filetype_is_file = "deny"
float_arithmetic = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
format_push_string = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
indexing_slicing = "deny"
infinite_loop = "deny"
inline_asm_x86_att_syntax = "deny"
inline_asm_x86_intel_syntax = "deny"
integer_division = "deny"
iter_over_hash_type = "deny"
large_include_file = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
little_endian_bytes = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
mem_forget = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
mixed_read_write_in_expression = "deny"
mod_module_files = "deny"
modulo_arithmetic = "deny"
multiple_inherent_impl = "deny"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "deny"
panic = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
pattern_type_mismatch = "deny"
pub_without_shorthand = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_type_annotations = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
self_named_module_files = "deny"
semicolon_outside_block = "deny"
str_to_string = "deny"
string_add = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
string_to_string = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unseparated_literal_suffix = "deny"
unwrap_used = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
