[package]
name = "objcache_examples"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[[bin]]
name = "objcache"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.*", default-features = false, features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
serde = { version = "1.0.210", default-features = false, features = ["std", "derive"] }
objcache = { path = "../" }
